@@ -9,6 +9,7 @@
 	  mod makefiles are generated by the content/makefile_builder.sh script;
 	  since this script is probably non-portable, the generated output makefiles
 	  have been included in the SVN dir for the time being.
+	* Makefile.am: Do not link with libmt32emu.la if it is not built.
 
 2010-03-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* mapedit/npcedit.cc: Fixed another instance of assuming longs are 32-bit.
